@startuml NanoTekSpice

set namespaceSeparator ::
hide empty members
hide <<type>> circle

namespace nts {

enum Tristate {
    UNDEFINED = -1
    FALSE = 0
    TRUE = 1
}

class PinId <<type>> {
    std::size_t
}

interface IPinoutBuffer {
    + Tristate read(PinId)
    + void write(PinId, Tristate)
}
IPinoutBuffer <|.. StaticPinoutBuffer
IPinoutBuffer <|.. DynamicPinoutBuffer
IPinoutBuffer <|.. LinkedPinoutBuffer

enum PinFlags <<bitfield>> {
    NONE = 0
    INPUT = 1
    OUTPUT = 2
}

class Pinout <<type>> {
    std::unordered_map<PinId, PinFlags>
}
PinFlags +- Pinout

interface IComponent {
    + Pinout pinout() const
    + void simulate(IPinoutBuffer&)
    + void display(std::ostream&) const
}
Pinout +- IComponent
IComponent <|.. NotGate
IComponent <|.. AndGate
IComponent <|.. FunctionalComponent

interface ICircuit<K> {
    .. Components ..
    + void insert(const K&, std::unique_ptr<IComponent>)
    + IComponent &getComponent(const K&)
    + std::unique_ptr<IComponent> remove(const K&)
    .. Links ..
    + void connect(const K&, PinId, const K&, PinId)
    + void connect(PinId, const K&, PinId)
}
IComponent <|-- ICircuit

' Example classes
class Links {
    - std::unordered_map<PinId, std::pair<K, PinId>> m_map
}

class Circuit<K> {
    - std::unordered_map<K, std::unique_ptr<IComponent>> m_chipsets
    - std::unordered_map<K, Links> m_innerLinks
    - Links m_outerLinks
}
Links +- Circuit
ICircuit <|.. Circuit : < ICircuit<K>

@enduml
